fixed spacing for fade in elements

--- a/src/App.css
+++ b/src/App.css
@@ -448,7 +448,7 @@ li.menu-item:hover .stack-text {
 .about {
   max-width: 1100px;
   margin: 0px auto;
-  padding: 50px 0;
+  padding: 50px 0 30px 0;
 }
 
 .about a {
@@ -583,6 +583,7 @@ li.menu-item:hover .stack-text {
 
 .work-intro {
   text-align: left;
+  margin-left: 15px;
 }
 
 .work-intro .button {
@@ -597,7 +598,7 @@ li.menu-item:hover .stack-text {
 
 .work-intro p {
   max-width: 935px;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0px 0px 0px;
 }
 
 /* .work-intro a {
@@ -691,7 +692,7 @@ li.menu-item:hover .stack-text {
 }
 
 #gallery {
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 #formButton {
